Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/SMAX_PS_ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Used to capture integration / batch job / transaction error logs.</description>
    <label>SMax Error Log</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMax Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>