Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/fields/SMAX_PS_Link__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Link__c</fullName>
    <description>URL of error.</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>