Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/fields/SMAX_PS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Message__c</fullName>
    <description>Used to capture the error message.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>