Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/fields/SMAX_PS_Method__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Method__c</fullName>
    <description>Captures the method that was the source of the error.</description>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>