Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/fields/SMAX_PS_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Type__c</fullName>
    <description>Captures type of error.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>