Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/listViews/All_SMax_Errors.listView-meta.xml
<ListView>
    <fullName>All_SMax_Errors</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Type__c</columns>
    <columns>SMAX_PS_Method__c</columns>
    <columns>SMAX_PS_Link__c</columns>
    <columns>SMAX_PS_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All SMax Errors</label>
    <language>en_US</language>
</ListView>