Perkin-UAT/force-app/main/default/objects/SMAX_PS_ErrorLog__c/listViews/SMAX_PS_CreateScheduledWorkOrders_Errors.listView-meta.xml
<ListView>
    <fullName>SMAX_PS_CreateScheduledWorkOrders_Errors</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Type__c</columns>
    <columns>SMAX_PS_Method__c</columns>
    <columns>SMAX_PS_Link__c</columns>
    <columns>SMAX_PS_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SMAX_PS_Method__c</field>
        <operation>equals</operation>
        <value>SMAX_PS_CreateScheduledWorkOrdersBatch</value>
    </filters>
    <label>SMAX_PS_CreateScheduledWorkOrders Errors</label>
</ListView>